Fix z-index in mobile

--- a/trang_tranh/static/css/feed/feed.css
+++ b/trang_tranh/static/css/feed/feed.css
@@ -466,6 +466,7 @@ pre {
     flex: none;
     overflow: scroll;
     flex-direction: row;
+    z-index: 3;
     inline-size: 100%;
     block-size: 80px;
     align-items: center;
